Swagger UI get by path parameter get all for remitter and merchant
